--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NutriCatch"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
             android:name=".views.loading.LoadingActivity"
             android:exported="false" />
@@ -27,7 +29,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.NutriCatch.Splash" >
+            android:theme="@style/Theme.NutriCatch.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
