--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -21,9 +21,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NutriCatch"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".views.camera.CameraActivity"
+            android:name=".views.navigation.camera.CameraActivity"
             android:exported="false" />
         <activity
             android:name=".views.navigation.HomeActivity"
@@ -44,7 +44,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.NutriCatch.Splash">
+            android:theme="@style/Theme.NutriCatch.Splash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
