--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NutriCatch"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".views.navigation.camera.CameraActivity"
@@ -34,12 +35,6 @@
             android:exported="false" />
         <activity
             android:name=".views.on_boarding.OnBoardingActivity"
-            android:exported="false" />
-        <activity
-            android:name=".views.auth.RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".views.auth.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
