--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
         -->
         <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3109200930054791~8540912959"/>
+        <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyC_DC6bJSF_pTNcLdSogD24B9IzCY3MJow" />
 
